Update pom.xml - maven surfire